Add structure for analyzed files

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,6 @@ edition = "2018"
 
 [dependencies]
 indicatif = "0.15"
+dialoguer = "0.7"
 clap = { version = "2", features = ["yaml"] }
+chrono = "0.4"
