--- a/src/cli.yaml
+++ b/src/cli.yaml
@@ -28,6 +28,18 @@ args:
       required: false
       min_values: 1
       use_delimiter: true
+  - skip:
+      help: Skips files that match this regex pattern
+      short: s
+      long: skip
+      required: false
+      takes_value: true
+  - filter:
+      help: Skips files that do not match this regex pattern
+      short: f
+      long: filter
+      required: false
+      takes_value: true
   - yes:
       help: Do not prompt for copy
       short: y
